# davybot-plugins-im

./: .gitignore  pyproject.toml
plugins/feishu-channel/: README.md  config_schema.json  plugin.py  plugin.yaml
shared/: plugin_base.py  utils.py  validators.py
